# smolduck

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md
backend/: pyproject.toml
backend/app/: __init__.py  agent.py  chart_build.py  charts.py  db.py  examples.py  export.py  history.py  kernel.py  kernel_api.py  lake.py  main.py  manifest.py  ml.py  ml_core.py  notebooks.py  profile.py  providers.py  query.py  replay.py  sandbox.py  sources.py  state.py
backend/tests/: test_agent.py  test_autoregister.py  test_charts.py  test_export.py  test_health_workspace.py  test_kernel.py  test_lake.py  test_ml.py  test_notebooks.py  test_profile.py  test_providers.py  test_query.py  test_replay.py  test_sources.py  test_ux.py
cli/: package.json
cli/src/: index.ts  workspace.ts
cli/src/commands/: build.ts  replay.ts  run.ts  status.ts  stop.ts
cli/src/vm/: smolvm.egress.test.ts  smolvm.ts
docs/: agent-quickstart.md
examples/: _generate.py
examples/churn/: subscriptions.csv
examples/ecommerce/: customers.csv  orders.csv  refunds.csv
fixtures/: _gen_orders.py  customers.csv  orders.parquet  refunds.json
frontend/: app.js  index.html  styles.css
frontend/components/: AgentBar.js  Catalog.js  CommandPalette.js  MlPanel.js  Notebook.js  PinnedCharts.js  ProfilePanel.js  ResultsGrid.js
frontend/components/cells/: Cell.js  CellEditor.js  ChartBuilder.js  PlotlyFigure.js  PythonOutput.js
frontend/lib/: api.js  chart.js  format.js  markdown.js  version.js
image/: entrypoint.sh  provision.sh  vendor_assets.py
mcp/: README.md  pyproject.toml
mcp/smolduck_mcp/: __init__.py  client.py  server.py
mcp/tests/: test_tools.py
