[project]
name = "smolduck-mcp"
version = "0.3.0"
description = "MCP server that lets external agents drive a running smolduck session (DuckDB + sandboxed Python, in a microVM)."
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
]

[project.scripts]
smolduck-mcp = "smolduck_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["smolduck_mcp"]
